--- a/nb4a.properties
+++ b/nb4a.properties
@@ -1,4 +1,4 @@
-PACKAGE_NAME=moe.nb4a
+PACKAGE_NAME=uwu.nb4a
 VERSION_NAME=1.4.0
-PRE_VERSION_NAME=pre-1.4.0-20250914-1
-VERSION_CODE=44
+PRE_VERSION_NAME=pre-1.4.0-202509
+VERSION_CODE=45
