--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,7 +1,11 @@
-name: Preview Build
+﻿name: Preview Build
+
 on:
   workflow_dispatch:
-    inputs:
+  push:
+    branches:
+      - main
+    
 jobs:
   libcore:
     name: Native Build (LibCore)
@@ -17,17 +21,19 @@ jobs:
         id: cache
         uses: actions/cache@v4
         with:
-          path: |
-            app/libs/libcore.aar
+          path: app/libs/libcore.aar
           key: ${{ hashFiles('.github/workflows/*', 'golang_status', 'libcore_status') }}
+          restore-keys: |
+            ${{ hashFiles('.github/workflows/*', 'golang_status') }}-
       - name: Install Golang
         if: steps.cache.outputs.cache-hit != 'true'
         uses: actions/setup-go@v5
         with:
-          go-version: ^1.25
+          go-version: '^1.25'
       - name: Native Build
         if: steps.cache.outputs.cache-hit != 'true'
         run: ./run lib core
+  
   build:
     name: Build OSS APK
     runs-on: ubuntu-latest
@@ -43,27 +49,33 @@ jobs:
       - name: LibCore Cache
         uses: actions/cache@v4
         with:
-          path: |
-            app/libs/libcore.aar
+          path: app/libs/libcore.aar
           key: ${{ hashFiles('.github/workflows/*', 'golang_status', 'libcore_status') }}
+          restore-keys: |
+            ${{ hashFiles('.github/workflows/*', 'golang_status') }}-
       - name: Gradle cache
         uses: actions/cache@v4
         with:
           path: ~/.gradle
           key: gradle-oss-${{ hashFiles('**/*.gradle.kts') }}
+          restore-keys: |
+            gradle-oss-
       - name: Gradle Build
         env:
           BUILD_PLUGIN: none
         run: |
           echo "sdk.dir=${ANDROID_HOME}" > local.properties
           echo "ndk.dir=${ANDROID_HOME}/ndk/25.0.8775105" >> local.properties
-          export LOCAL_PROPERTIES="${{ secrets.LOCAL_PROPERTIES }}"
+          echo "${{ secrets.LOCAL_PROPERTIES }}" >> local.properties
+          
           ./run init action gradle
           ./gradlew app:assemblePreviewRelease
-          APK=$(find app/build/outputs/apk -name '*arm64-v8a*.apk')
-          APK=$(dirname $APK)
-          echo "APK=$APK" >> $GITHUB_ENV
+          
+          APK_PATH=$(find app/build/outputs/apk -name '*arm64-v8a*.apk')
+          APK_DIR=$(dirname $APK_PATH)
+          echo "APK_DIR=$APK_DIR" >> $GITHUB_ENV
+          
       - uses: actions/upload-artifact@v4
         with:
           name: APKs
-          path: ${{ env.APK }}
+          path: ${{ env.APK_DIR }}
